[#160] - Server: grant and revoke server administrators
